version 2.3.5 - fixed postion of return button on mobile

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -64,7 +64,7 @@ h2 a {
 }
 
 #navReturnButton {
-  left: 5%;
+  right: 5%;
   bottom: 5%;
   font-size: 3em;
   border-radius: 50%;
